--- a/bank_account/account.query/pom.xml
+++ b/bank_account/account.query/pom.xml
@@ -29,7 +29,6 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
@@ -49,6 +48,16 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.techbank</groupId>
+			<artifactId>cqrs.core</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.techbank</groupId>
+			<artifactId>account.common</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
